# trpc

./: .env  Cargo.toml  LICENSE  README.md  rpc-spec.txt
src/: _main.rs  client.rs  error.rs  lib.rs  main.rs  request.rs  response.rs  session.rs  torrent.rs
tests/: test dir.torrent  torrent_test.rs
