[package]
name = "transmission-rpc"
version = "0.2.2"
authors = ["Valeriy Kostikov <mkoctuk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
bytes = "1.0"
dotenv = "0.15"
env_logger = "0.8"
log = "0.4"
netc = { version = "0.6", git = "https://github.com/serbe/netc" }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.6", features = ["rt-multi-thread", "time"]}
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.6", features = ["full"]}
