[package]
authors = ["Valeriy Kostikov <mkoctuk@gmail.com>"]
edition = "2018"
name = "trpc"
version = "0.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
bytes = "1.0"
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
netc = {version = "0.6", git = "https://github.com/serbe/netc"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tokio = {version = "1", features = ["rt-multi-thread", "time"]}

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
