[package]
authors = ["serbe <serbenv@gmail.com>"]
description = "Transmission RPC Rust library"
edition = "2021"
name = "trpc"
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/serbe/trpc/"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
bytes = "1.1"
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
netc = "0.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tokio = {version = "1", features = ["rt-multi-thread", "time"]}

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
